--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
     "version": 2,
     "builds": [
         {
-            "scr": "./manage.py",
+            "source": "./manage.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "scr": "/(.*)",
+            "source": "/(.*)",
             "dest": "/"
         }
     ]
