--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
-    "version": 2,
     "builds": [
-        {
-            "source": "./manage.py",
-            "use": "@vercel/python"
+    {
+    "src": "setup/wsgi.py",
+    "use": "@vercel/python"
+    
         }
+    
     ],
     "routes": [
-        {
-            "source": "/(.*)",
-            "dest": "/"
+    {
+    "src": "/(.*)",
+    "dest": "setup/wsgi.py"
+    
         }
+    
     ]
 }
